cambie color fondo

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <header>
-    <h1 class="text-center">Elementos De Bootstrap</h1>
+    <h1 class="text-center">Elementos De Bootstrap Prueba git</h1>
     <nav class="navbar navbar-expand-lg color">
       <div class="container-fluid">
         <a class="navbar-brand" href="#"><img class="logo" src="./img/img/logo.png" alt="logo"></a>
